# fkwallet-sdk

./: README.md  pyproject.toml
.github/workflows/: publish.yml  upload.yml
examples/: basic_usage.py  transfer.py  webhook_handler.py  withdrawal.py
fkwallet/: __init__.py  auth.py  client.py  exceptions.py  models.py  webhook.py
tests/: test_auth.py  test_client.py  test_models.py  test_webhook.py
