[tool.poetry]
name = "fkwallet-sdk"
version = "0.1.1"
description = "Python SDK for FKWallet API"
authors = ["ForestsNet <dev@forestsnet.uk>"]
readme = "README.md"
packages = [{include = "fkwallet"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = ">=0.27"
pydantic = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
respx = ">=0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
